<resources>
    <string name="app_name">TestGallery</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sing_in">Sign in</string>
    <string name="dont_have_account">Don\'t have account? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Have account? Sign in</string>
    <string name="loading">Loading...</string>
    <string name="check_your_network">Check your network connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="select_image">Select image</string>
    <string name="input_username">Input username</string>
    <string name="gallery">Gallery</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="play_gif">Play gif</string>
    <string name="description">Description</string>
    <string name="hashtag">Hashtag</string>
    <string name="add_photo">Add photo</string>
    <string name="choose_photo_to_upload">Choose photo to upload</string>
    <string name="add_description">Add description</string>
    <string name="done">Done</string>
    <string name="enable_location">Please, enable location services</string>
    <string name="allow_location">Please, grant location permission</string>
</resources>
